code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_17.wast
(assert_invalid
  (module
    (type (func))
    (table 0 funcref)
    (func $arity-1-vs-0 (call_indirect (type 0) (i32.const 1) (i32.const 0)))
  )
  "type mismatch"
)